--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 
 <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+  
+  <p>Here is some text for my paragraph in my brand new website. Yippii!</p>
 
 </body>
 </html> 
