--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
 <body>
 
 <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+<p>Here is some text for my paragraph in my brand new website. Yippii!</p>
   
-  <p>Here is some text for my paragraph in my brand new website. Yippii!</p>
-
+div {
+  background-color:white;
+  }
+<ol>
+  <li> Dogs
+  <li> Cats
+</ol>  
+  
+  
 </body>
 </html> 
