--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 div {
   background-color:white;
   }
-<ol>
-  <li> Dogs
-  <li> Cats
+<ol>Best dogs
+  <li> Alma
+  <li> Tyty
 </ol>  
+<ul> Buy from shop
+  <li>Milk
+  <li>Coffee
+</ul>
   
   
 </body>
