--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html>
 <head> 
 <link rel="stylesheet" href="styles.css">
+  <style>
+    .myDiv {
+    Border: 2px; dotted;
+    
+    }
+   </style/
 </head>
 <body>
 
-<h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
-<p>Here is some text for my paragraph in my brand new website. Yippii!</p>
-  
-div {
-  background-color:white;
-  }
+<div class="myDiv">
+  <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+  <p>Here is some text for my paragraph in my brand new website. Yippii!</p>
+</div>  
+
 <ol>Best dogs
   <li> Alma
   <li> Tyty
