--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
 <div class="myDiv">
-  <p>Here is some text for my paragraph in my brand new website. Yippii!</p>
+  <p>Here is some text for my paragraph in my brand new website. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
 </div>  
 
 <ol>Best dogs
