--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
 <div class="myDiv">
   <p>Here is some text for my paragraph in my brand new website. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
-  <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Vaiko ei?</p>
+  <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko.</p>
 </div>  
 
 <ol>Best dogs
