--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head> 
 <link rel="stylesheet" href="styles.css">
-  
+ <style>
+    .listat {
+    Color: white;
+    }
+  </style>
 </head>
 <body>
 
@@ -12,11 +16,11 @@
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Ei?</p>
 </div>  
 
-<ol>Best dogs
+<ol class="listat">Best dogs
   <li> Alma
   <li> Tyty
 </ol>  
-<ul> Buy from shop
+<ul class="listat"> Buy from shop
   <li>Milk
   <li>Coffee
 </ul>
