--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     .listat {
     Color: white;
     }
+ div.myDiv {
+  border: 2px dotted;
+  width: 100px;
+  height: 100px;
+   
+  }
   </style>
 </head>
 <body>
