--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. ..?</p>
 </div>  
 
-<ol class="listat">Best dogs
+<h2>Best dogs</h2>
+<ol class="listat">
   <li> Alma
   <li> Tyty
 </ol>  
-<ul class="listat"> Buy from shop
+ 
+<h2>Buy fom shop</h2> 
+<ul class="listat">
   <li>Milk
   <li>Coffee
 </ul>
