--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     .listat {
     Color: white;
     }
+  
  div.myDiv {
   border: 2px dotted;
   width: 100px;
-  height: 100px;
-   
+  height: 100px;  
   }
+  
+  .H2 {
+   Color: white;
+  }
+  
   </style>
 </head>
 <body>
@@ -22,13 +27,13 @@
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. ..?</p>
 </div>  
 
-<h2>Best dogs</h2>
+<h2 class="H2">Best dogs</h2>
 <ol class="listat">
   <li> Alma
   <li> Tyty
 </ol>  
  
-<h2>Buy fom shop</h2> 
+<h2 class="H2">Buy fom shop</h2> 
 <ul class="listat">
   <li>Milk
   <li>Coffee
