--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </ol>  
  
 <h2 class="H2">Buy fom shop</h2> 
-<ul class="listat">
+<ul style="list-style-type:square;" class="listat">
   <li>Milk
   <li>Coffee
 </ul>
