--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 </head>
 <body>
 
-  <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+  <h1>Tervetuloa uudelle harjoitusnettisivulleni!</h1>
 <div class="myDiv">
-  <p>Here is some text for my paragraph in my brand new website. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
+  <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. ..?</p>
 </div>  
 
-<h2 class="H2">Best dogs</h2>
+<h2 class="H2">Parhaimmat koirat</h2>
 <ol type="A" class="listat">
   <li> Alma
   <li> Tyty
 </ol>  
  
-<h2 class="H2">Buy fom shop</h2> 
+<h2 class="H2">Muista ostaa kaupasta</h2> 
 <ul style="list-style-type:square;" class="listat">
-  <li>Milk
-  <li>Coffee
+  <li>Maitoa
+  <li>Kahvia
 </ul>
   
   
