--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-  <h1>Tervetuloa uudelle harjoitusnettisivulleni!</h1>
+  <h1>Tervetuloa uudelle harjoitusnettisivulleni! :)</h1>
 <div class="myDiv">
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. ..?</p>
