--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
  </div>  
 <h2 class="H2">Muista ostaa kaupasta</h2> 
 <ul style="list-style-type:square;" class="listat">
+ <div class="myDiv">
   <li>Maitoa
   <li>Kahvia
 </ul>
-  
+   </div>  
   
 </body>
 </html> 
