--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h1>Tervetuloa uudelle harjoitusnettisivulleni!</h1>
 
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
-  <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. ..?</p>
+  <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko.</p>
 
 
 <h2 class="H2">Parhaimmat koirat</h2>
