--- a/index.html
+++ b/index.html
@@ -22,25 +22,24 @@
 <body>
 
   <h1>Tervetuloa uudelle harjoitusnettisivulleni!</h1>
-
+<div class="myDiv">
+ <p> HEI! </p>
+</div>
+ 
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko.</p>
 
 
 <h2 class="H2">Parhaimmat koirat</h2>
 <ol type="A" class="listat">
-  <div class="myDiv">
   <li> Alma
   <li> Tyty
- </div>
 </ol>  
    
 <h2 class="H2">Muista ostaa kaupasta</h2> 
 <ul style="list-style-type:square;" class="listat">
- <div class="myDiv">
   <li>Maitoa
   <li>Kahvia
- </div>
 </ul>
     
   
