--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
+ <title>Annan kotisivu</title>
 <link rel="stylesheet" href="styles.css">
  <style>
     .listat {
