--- a/second.html
+++ b/second.html
@@ -8,6 +8,8 @@
   
   <body>
     <h1>Tervetuloa toiselle sivulleni! *</h1>
+    <a href="index.html">"Nappi"</a>
+    
     <p>Tänne sivulle kerään tietoja kaikesta mahdollisesta asiasta. Täältä löydät siis asioita, joita et uskonut tarvitsevasi tietää, mutta
       nyt kohta tiedät. Tai sitten et.</p>
     <p>Tässä toinen kappale sivuilleni, jotta saan täyttöä nettisivuilleni. Tässä kappaleessa ei käsitellä mitään asioita, tämä on vain täyttötekstiä,
