--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <h1>Tervetuloa uudelle harjoitusnettisivulleni!</h1>
 <div class="myDiv">
+ <a href="second.html">Tästä toiselle sivulle"</a>
  <p> HEI! </p>
 </div>
  
