--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <h1>Tervetuloa uudelle harjoitusnettisivulleni!</h1>
- <a href="second.html">Tästä toiselle sivulle"</a>
+ <a href="second.html">Tästä toiselle sivulle</a>
  
 <div class="myDiv">
  <p> HEI! </p>
