--- a/second.html
+++ b/second.html
@@ -8,7 +8,7 @@
   
   <body>
     <h1>Tervetuloa toiselle sivulleni! </h1>
-    <a href="index.html">"Tästä indexiin"</a>
+    <a href="index.html">Tästä indexiin</a>
     
     <p>Tänne sivulle kerään tietoja kaikesta mahdollisesta asiasta. Täältä löydät siis asioita, joita et uskonut tarvitsevasi tietää, mutta
       nyt kohta tiedät. Tai sitten et.</p>
