--- a/second.html
+++ b/second.html
@@ -20,7 +20,7 @@
       <figcaption>Villakoirat tykkäävät leikkiä palloilla</figcaption>
     </figure>
     
-    <h2>Tähän väliin haluaisin mainita....</h2>
+    <h2>Tähän väliin haluaisin mainita, että....</h2>
     <progress value="3000" max="7000">5000</progress>Koirahulluuteni on kasvusuunnassa!
     
     <h2>Tiesitkö, että..</h2>
