--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <h1>Tervetuloa toiselle sivulleni! </h1>
+    <h1>Tervetuloa toiselle sivulleni! *</h1>
     <a href="index.html">Tästä indexiin</a>
     
     <p>Tänne sivulle kerään tietoja kaikesta mahdollisesta asiasta. Täältä löydät siis asioita, joita et uskonut tarvitsevasi tietää, mutta
