--- a/second.html
+++ b/second.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
   <head>
     <title>Annan toinen sivu kotisivuilla</title>
     <link rel="stylesheet" href="styles2.css">
