--- a/second.html
+++ b/second.html
@@ -8,6 +8,7 @@
       figure {
         border: 1px solid;
         padding: 4px;
+        margin: auto;
       }
           
       figcaption {
@@ -15,6 +16,7 @@
         text-align:center;
         border: 1px solid;
         padding: 4px;
+        margin:auto;
       }
       
       progress {
