--- a/second.html
+++ b/second.html
@@ -13,6 +13,7 @@
           
       figcaption {
         color: white;
+        backgroud-color: gray;
         text-align:center;
         border: 1px solid;
         padding: 4px;
