--- a/second.html
+++ b/second.html
@@ -9,6 +9,7 @@
         border: 1px solid;
         padding: 4px;
         margin: auto;
+        text-align:center;
       }
           
       figcaption {
