--- a/second.html
+++ b/second.html
@@ -8,7 +8,7 @@
       figure {
         border: 1px solid;
         padding: 4px;
-        margin: auto;
+        margin: 4px;
         text-align:center;
       }
           
