--- a/second.html
+++ b/second.html
@@ -14,7 +14,7 @@
           
       figcaption {
         color: white;
-        backgroud-color: gray;
+        background-color: gray;
         text-align:center;
         border: 1px solid;
         padding: 4px;
