--- a/second.html
+++ b/second.html
@@ -6,7 +6,7 @@
     
     <style> 
       figure {
-        border: 1px solid;
+        border: none;
         padding: 4px;
         margin: 4px;
         text-align:center;
