--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
    Color: white;
   }
   
+  header {
+  }
+  
+  nav {
+  }
+  
+  section {
+  }
+  
+  article {
+  }
+  
+  aside {
+  }
+  
+  footer {
+  }
+  
+  
   </style>
 </head>
 <body>
@@ -30,7 +49,8 @@
 </div>
  
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
-  <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko.</p>
+  <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
+   Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. </p>
 
 
 <h2 class="H2">Parhaimmat koirat</h2>
