--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@
 </head>
 <body>
 
-  <h1>Tervetuloa uudelle harjoitusnettisivulleni!</h1>
- <a href="second.html">Tästä toiselle sivulle</a>
+ <header><h1>Nettisivut kehitteillä!</h1>
+ </header>
+ 
+ <nav>
+  <ul>
+   <li><a href="index.html">Index</a></li>
+   <li><a href="second.html">Second</a></li>
+  </ul>
+ </nav>
+ 
  
 <div class="myDiv">
  <p> HEI! </p>
