--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
   </ul>
  </nav>
  
+ <section>
+  <h2 class="H2">Parhaimmat koirat</h2>
+<ol type="A" class="listat">
+  <li> Alma
+  <li> Tyty
+</ol>  
+ </section>
  
 <div class="myDiv">
  <p> HEI! </p>
@@ -61,11 +68,7 @@
    Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. </p>
 
 
-<h2 class="H2">Parhaimmat koirat</h2>
-<ol type="A" class="listat">
-  <li> Alma
-  <li> Tyty
-</ol>  
+
    
 <h2 class="H2">Muista ostaa kaupasta</h2> 
 <ul style="list-style-type:square;" class="listat">
