--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
 </ol>  
  </section>
  
+ <section>
+  <h2 class="H2">Muista ostaa kaupasta</h2> 
+<ul style="list-style-type:square;" class="listat">
+  <li>Maitoa
+  <li>Kahvia
+</ul>
+ </section>
+ 
+ 
  <article>
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
@@ -71,15 +80,12 @@
 </div>
  </aside> 
   
+<footer>
+ <p>Tämän nettisivun on tehnyt maailman paras koirafani Anna</p>
+ </footer>
 
 
-
-   
-<h2 class="H2">Muista ostaa kaupasta</h2> 
-<ul style="list-style-type:square;" class="listat">
-  <li>Maitoa
-  <li>Kahvia
-</ul>
+  
     
   
 </body>
