--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   }
   
   header {
+   background-color: off-white;
+   padding: 4px;
+   text-align: center;
+   color: black;
   }
   
   nav {
@@ -34,6 +38,10 @@
   }
   
   footer {
+   background-color: off-white;
+   padding: 4px;
+   text-align:center;
+   color:black;
   }
   
   
