--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
   }
   
   nav {
+   float:left;
+   width:30%;
+   padding: 20px;
+   background-color: off-white;
+  
+   
   }
   
   section {
