--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
    width:30%;
    padding: 20px;
    background-color: off-white;
-  
-   
   }
   
   section {
+   content:"";
+   display: table;
+   clear:both;
   }
   
   article {
