--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
  <title>Annan kotisivu</title>
 <link rel="stylesheet" href="styles.css">
  <style>
+  * {
+  box-sizing: border-box;
+}
     .listat {
     Color: white;
     }
