--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
  </aside> 
   
 <footer>
- <p>Tämän nettisivun on tehnyt maailman paras koirafani Anna</p>
+ <p> © Anna Pääkkönen /p>
  </footer>
 
 
