--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   }
   
   header {
-   background-color: off-white;
+   background-color: white;
    padding: 4px;
    text-align: center;
    color: black;
@@ -32,7 +32,7 @@
    float:left;
    width:30%;
    padding: 20px;
-   background-color: off-white;
+   background-color: white;
   }
   
   section {
@@ -48,7 +48,7 @@
   }
   
   footer {
-   background-color: off-white;
+   background-color: white;
    padding: 4px;
    text-align:center;
    color:black;
