--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   }
   
   header {
-   background-color: sky-blue;
+   background-color: blue;
    padding: 4px;
    text-align: center;
    color: black;
