--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   }
   
   header {
-   background-color: blue;
-   padding: 4px;
-   text-align: center;
+   background-color:aliceblue;
+   padding:4px;
+   text-align:center;
+   font-size:30px;
    color: black;
   }
   
@@ -32,7 +33,7 @@
    float:left;
    width:30%;
    padding: 20px;
-   background-color: white;
+   background-color:aliceblue;
   }
   
   section {
@@ -48,7 +49,7 @@
   }
   
   footer {
-   background-color: white;
+   background-color:aliceblue;
    padding: 4px;
    text-align:center;
    color:black;
