--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
    background-color:aliceblue;
   }
   
+  nav ul {
+  list-style-type: none;
+  padding: 0;
+}
   section {
    content:"";
    display: table;
