--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   list-style-type: none;
   padding: 0;
 }
+  
   section {
    content:"";
    display: table;
@@ -48,6 +49,9 @@
   
   article {
    float: left;
+   width: 70%;
+   padding: 20px;
+   
   }
   
   aside {
