--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   }
   
   header {
-   background-color:aliceblue;
+   background-color: lightblue;
    padding:4px;
    text-align:center;
    font-size:40px;
@@ -33,7 +33,7 @@
    float:left;
    width:30%;
    padding: 20px;
-   background-color:aliceblue;
+   background-color:lightblue;
   }
   
   nav ul {
@@ -61,7 +61,7 @@
   }
   
   footer {
-   background-color:aliceblue;
+   background-color:lightblue;
    padding: 4px;
    text-align:center;
    color:black;
