--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
  </header>
  
  <nav>
-  <ul>
-   <li><a href="index.html">Index</a></li>
-   <li><a href="second.html">Second</a></li>
-  </ul>
+   <a href="index.html">Index</a>
+   <a href="second.html">Second</a>
  </nav>
 
  <article>
