--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
   }
   
   aside {
-  width: 100px;
-  height: 100px;  
+  width: 30%;
+  padding-left: 15px;
+  margin-left: 15px;
+  float: right;
+  font-style: italic;
+  background-color: lightgray; 
   }
   
   footer {
