--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
  </aside> 
  
  <section>
+  <div class="section">
   <h2 class="H2">Parhaimmat koirat</h2>
 <ol type="A" class="listat">
   <li> Alma
   <li> Tyty
 </ol>  
+  </div>
  </section>
  
  <section>
