--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   }
   
   header {
-   background-color: lightblue;
+   background-color: dodgerblue;
    padding:4px;
    text-align:center;
    font-size:40px;
@@ -76,7 +76,8 @@
 </head>
 <body>
 
- <header><h1>Nettisivut kehitteillä!</h1>
+ <header>
+  h1>Nettisivut kehitteillä!</h1>
  </header>
  
  <nav>
