--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
    color:black;
   }
   
-  
   </style>
 </head>
 <body>
 
+ <div id="header1"
  <header>
   <h1>Nettisivut kehitteillä!</h1>
  </header>
+ </div>
  
  <nav>
    <a href="index.html">Index</a>
