--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
  <div id="header1">
  <header>
-  <h1>Nettisivut kehitteillä! JES!</h1>
+  <h1>Nettisivut kehitteillä!</h1>
  </header>
  </div>
  
