--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
  </aside> 
  
  <section>
-  <div class="section">
+  <div id="section">
   <h2 class="H2">Parhaimmat koirat</h2>
 <ol type="A" class="listat">
   <li> Alma
@@ -72,9 +72,11 @@
  
   
  
+<div id=footer> 
 <footer>
  <p> © Anna Pääkkönen </p>
  </footer>
+ </div>
 
 
   
