--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
 </div>
  </aside> 
  
+ 
+<div id="section">
  <section>
-  <div id="section">
   <h2 class="H2">Parhaimmat koirat</h2>
 <ol type="A" class="listat">
   <li> Alma
   <li> Tyty
-</ol>  
-  </div>
+</ol> 
  </section>
+ </div>
  
  <section>
   <h2 class="H2">Muista ostaa kaupasta</h2> 
@@ -74,7 +75,7 @@
  
 <div id=footer> 
 <footer>
- <p> © Anna Pääkkönen </p>
+ <p> © Anna Pääkkönen jeppujeee </p>
  </footer>
  </div>
 
