--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
  
   
  
-
+<div id=footer>
 <footer>
- <p> © Anna Pääkkönen </p>
+ <p> © Anna Pääkkönen  mgigowhie </p>
  </footer>
+ </div>
 
 
 
