--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 </head>
 <body>
 
-
+<div id="header">
  <header>
   <h1>Nettisivut kehitteillä!</h1>
  </header>
+ </div>
 
  
  <nav>
@@ -75,7 +76,7 @@
  
 <div id="footer">
 <footer>
- <p> © Anna Pääkkönen  mgigowhie </p>
+ <p> © Anna Pääkkönen  mgig </p>
  </footer>
  </div>
 
