--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
  </header>
  </div>
 
- 
+ <div id="nav">
  <nav>
    <a href="index.html">Index</a>
    <a href="second.html">Second</a>
  </nav>
+ </div>
 
  <article>
   <h2>Tervetuloa tutustumaan sivuihini</h2>
@@ -63,6 +64,8 @@
  </section>
  </div>
  
+ 
+<div id="section">
  <section>
   <h2 class="H2">Muista ostaa kaupasta</h2> 
 <ul style="list-style-type:square;" class="listat">
@@ -70,6 +73,7 @@
   <li>Kahvia
 </ul>
  </section>
+  </div>
  
  
   
