--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  </div>
  
  
-<div id="section">
+<div id="section2">
  <section>
   <h2 class="H2">Muista ostaa kaupasta</h2> 
 <ul style="list-style-type:square;" class="listat">
