--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <link rel="stylesheet" href="styles.css">
  <style>
  
-    .listat {
+ * {   box-sizing: border-box; }
+  
+  .listat {
     Color: white;
     }
   
