--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 <link rel="stylesheet" href="styles.css">
  <style>
  
- * {   box-sizing: border-box; }
+ * {   
+  box-sizing: border-box; 
+  }
   
-  .listat {
+  
+ .listat {
     Color: white;
     }
   
