--- a/second.html
+++ b/second.html
@@ -2,7 +2,7 @@
 <html lang="fi">
   <head>
     <title>Annan toinen sivu kotisivuilla</title>
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="styles.css">
     
     <style> 
       figure {
