--- a/third.html
+++ b/third.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
+<head> 
+ <title>Annan kotisivu</title>
+<link rel="stylesheet" href="styles.css">
+ <style>
+ 
+ * {   
+  box-sizing: border-box; 
+  }
+  
+  
+ .listat {
+    Color: white;
+    }
+  
+  
+  .H2 {
+   Color: white;
+  }
+  
+  
+  
+  </style>
+</head>
+<body>
 
+<div id="header">
+ <header>
+  <h1>Kolmannen sivun jännittävä sisältö</h1>
+ </header>
+ </div>
+
+ <div id="nav">
+ <nav>
+   <a href="index.html">Index</a>
+   <a href="second.html">Second</a>
+ </nav>
+ </div>
+
+ <article>
+  <h2>Kolmannella sivulla mietitään uusia jänniä juttuja</h2>
+  <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
+  <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
+   Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. </p>
+ </article>
+
+ <aside>
+ 
+ </aside> 
+ 
+ 
+<div id="section">
+ <section>
+  <h2 class="H2">Parhaimmat koirat</h2>
+<ol type="A" class="listat">
+  <li> Alma
+  <li> Tyty
+</ol> 
+ </section>
+ </div>
+ 
+ 
+<div id="section2">
+ <section>
+  <h2 class="H2">Muista ostaa kaupasta</h2> 
+<ul style="list-style-type:square;" class="listat">
+  <li>Maitoa
+  <li>Kahvia
+</ul>
+ </section>
+  </div>
+ 
+ 
+  
+ 
+<div id="footer">
+<footer>
+ <p> © Anna Pääkkönen </p>
+ </footer>
+ </div>
+
+
+
+  
+    
+  
+</body>
+</html> 
