--- a/third.html
+++ b/third.html
@@ -9,6 +9,11 @@
   box-sizing: border-box; 
   }
   
+ .nav {
+  float: left;
+  width: 30%;
+  background: black;
+  padding: 20px;
   
  .listat {
     Color: white;
@@ -22,6 +27,7 @@
   
   
   </style>
+ 
 </head>
 <body>
 
