--- a/third.html
+++ b/third.html
@@ -54,25 +54,15 @@
  <aside>
  
  </aside> 
- 
- 
-<div id="section">
- <section>
-  <h2 class="H2">Parhaimmat koirat</h2>
-<ol type="A" class="listat">
-  <li> Alma
-  <li> Tyty
-</ol> 
- </section>
- </div>
+
  
  
 <div id="section2">
  <section>
-  <h2 class="H2">Muista ostaa kaupasta</h2> 
+  <h2 class="H2">Juomavalikoimat koodauksen tukena</h2> 
 <ul style="list-style-type:square;" class="listat">
-  <li>Maitoa
-  <li>Kahvia
+  <li>Megaforce Sugarfree
+  <li>Euroshopper Energy Drink
 </ul>
  </section>
   </div>
