--- a/third.html
+++ b/third.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
- <title>Annan kotisivu</title>
+ <title>Annan kotisivu 3</title>
 <link rel="stylesheet" href="styles.css">
  <style>
  
@@ -18,7 +18,6 @@
  .listat {
     Color: white;
     }
-  
   
   .H2 {
    Color: white;
