--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 
  <div id="nav">
  <nav>
-   <a href="index.html">Index</a>
-   <a href="second.html">Second</a>
+   <a href="index.html">Aloitussivu</a>
+   <a href="second.html">Toinen sivu</a>
+   <a href="third.html">Kolmas sivu</a>
  </nav>
  </div>
 
