--- a/third.html
+++ b/third.html
@@ -5,15 +5,18 @@
 <link rel="stylesheet" href="styles.css">
  <style>
  
- * {   
-  box-sizing: border-box; 
-  }
+ 
   
  #nav {
   float: left;
   width: 30%;
   background: gainsboro;
   padding: 20px;
+  
+  .nav ul {
+  list-style-type: none;
+  padding: 0;
+}
   
  .listat {
     Color: white;
