--- a/third.html
+++ b/third.html
@@ -41,9 +41,11 @@
 
  <div id="nav">
  <nav>
-   <a href="index.html">Aloitussivu</a>
-   <a href="second.html">Toinen sivu</a>
-   <a href="third.html">Kolmas sivu</a>
+  <ul>
+   <li><a href="index.html">Aloitussivu</a></li>
+   <li><a href="second.html">Toinen sivu</a></li>
+   <li><a href="third.html">Kolmas sivu</a></li>
+  </ul>
  </nav>
  </div>
 
