--- a/third.html
+++ b/third.html
@@ -13,7 +13,7 @@
   background: gainsboro;
   padding: 20px;
   
-  nav ul {
+ #nav ul {
   list-style-type: none;
   padding: 0;
 }
@@ -50,7 +50,7 @@
  </div>
 
  <article>
-  <h2>Kolmannella sivulla mietitään uusia jänniä juttuja</h2>
+  <h2 class="h2">Kolmannella sivulla mietitään uusia jänniä juttuja</h2>
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
    Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. </p>
