--- a/third.html
+++ b/third.html
@@ -6,7 +6,6 @@
  <style>
  
  #header {
-  
   }
   
  #nav {
@@ -20,6 +19,13 @@
   padding: 0;
 }
   
+ #section2{
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+  height: 300px;
+  }
   
  
   
@@ -61,7 +67,7 @@
 
  
  
-<div id="section2">
+<div id="section">
  <section>
   <h2 class="H2">Juomavalikoimat koodauksen tukena</h2> 
 <ul style="list-style-type:square;" class="listat">
