--- a/third.html
+++ b/third.html
@@ -23,7 +23,7 @@
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: #f1f1f1;
+  background-color: whitesmoke;
   height: 300px;
   }
   
