--- a/third.html
+++ b/third.html
@@ -48,6 +48,8 @@
    <li><a href="index.html">Aloitussivu</a></li>
    <li><a href="second.html">Toinen sivu</a></li>
    <li><a href="third.html">Kolmas sivu</a></li>
+   <li><a href="www.google.com" target="_blank">Google.com</a></li>
+   <li><a href="www.hs.fi" target="_blank">Hesari</a></li>
   </ul>
  </nav>
  </div>
