--- a/third.html
+++ b/third.html
@@ -5,7 +5,10 @@
 <link rel="stylesheet" href="styles.css">
  <style>
  
- #header {
+ header {
+  padding: 30px;
+  font-size:50px;
+  font-style:italic;
   }
   
  #nav {
