--- a/third.html
+++ b/third.html
@@ -11,7 +11,7 @@
   font-style:italic;
   }
   
- #nav {
+ nav {
   float: left;
   width: 30%;
   background: gainsboro;
@@ -22,7 +22,7 @@
   padding: 0;
 }
   
- #section2 {
+ section {
   float: left;
   padding: 20px;
   width: 70%;
@@ -39,13 +39,11 @@
 </head>
 <body>
 
-<div id="header">
+
  <header>
   <h1>Kolmannen sivun jännittävä sisältö</h1>
  </header>
- </div>
-
- <div id="nav">
+ 
  <nav>
   <ul>
    <li><a href="index.html">Aloitussivu</a></li>
@@ -55,19 +53,17 @@
    <li><a href="www.hs.fi" target="_blank">Hesari</a></li>
   </ul>
  </nav>
- </div>
 
- <div id="section2">
+ 
  <section>
   <h2 class="h2">Kolmannella sivulla mietitään uusia jänniä juttuja</h2>
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
    Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. </p>
  </section>
- </div>
 
- 
-<div id="section">
+
+
  <section>
   <h2 class="H2">Juomavalikoimat koodauksen tukena</h2> 
 <ul style="list-style-type:square;" class="listat">
@@ -75,16 +71,14 @@
   <li>Euroshopper Energy Drink
 </ul>
  </section>
-  </div>
  
  
   
  
-<div id="footer">
 <footer>
  <p> © Anna Pääkkönen </p>
  </footer>
- </div>
+
 
 
 
