--- a/third.html
+++ b/third.html
@@ -8,7 +8,6 @@
  header {
   padding: 30px;
   font-size:50px;
-  font-style:bold;
   }
   
  nav {
@@ -26,13 +25,9 @@
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: whitesmoke;
+  background-color: white;
   height: 300px;
   }
-  
- 
-  
-  
   
   </style>
  
@@ -44,6 +39,7 @@
   <h1>Kolmannen sivun jännittävä sisältö</h1>
  </header>
  
+ <section>
  <nav>
   <ul>
    <li><a href="index.html">Aloitussivu</a></li>
@@ -54,8 +50,7 @@
   </ul>
  </nav>
 
- 
- <section>
+
   <h2 class="h2">Kolmannella sivulla mietitään uusia jänniä juttuja</h2>
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
@@ -64,13 +59,13 @@
 
 
 
- <section>
+ 
   <h2 class="H2">Juomavalikoimat koodauksen tukena</h2> 
 <ul style="list-style-type:square;" class="listat">
   <li>Megaforce Sugarfree
   <li>Euroshopper Energy Drink
 </ul>
- </section>
+
  
  
   
