--- a/third.html
+++ b/third.html
@@ -7,6 +7,10 @@
  header {
   padding: 30px;
   font-size:20px;
+  font-color: black;
+  text-align:center;
+  background-color: gray;
+   
   }
   
  nav {
