--- a/third.html
+++ b/third.html
@@ -9,7 +9,7 @@
   font-size:20px;
   font-color: black;
   text-align:center;
-  background-color: gray;
+  background-color: whitesmoke;
    
   }
   
