--- a/third.html
+++ b/third.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
+ <link rel="stylesheet" href="styles.css">
  <title>Annan kotisivu 3</title>
  <style>
   
