--- a/third.html
+++ b/third.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
- <title>Annan kotisivu 3</title>
-  <link rel="stylesheet" href="styles.css">
+ <title> Annan kotisivu 3 </title>
+ <link rel="stylesheet" href="styles.css">
  <style>
   
  body {
@@ -14,20 +14,20 @@
   font-size:20px;
   font-color: black;
   text-align:center;
-  background-color: whitesmoke;
-   
+  background-color: white;
   }
   
  nav {
   float: left;
   width: 25%;
-  background: gainsboro;
+  background: snow;
   padding: 20px;
+  }
   
  nav ul {
   list-style-type: none;
   padding: 0;
-}
+  }
   
  section {
   float: left;
@@ -36,7 +36,6 @@
   background-color: white;
   height: 300px;
   margin: 5px;
-  
   }
   
   </style>
