--- a/third.html
+++ b/third.html
@@ -14,7 +14,7 @@
   font-size:20px;
   font-color: black;
   text-align:center;
-  background-color: white;
+  background-color: black;
   }
   
  nav {
