--- a/third.html
+++ b/third.html
@@ -4,10 +4,7 @@
  <title> Annan kotisivu 3 </title>
  <link rel="stylesheet" href="styles.css">
  <style>
-  
- body {
-  background-color: linen;
-  }
+ 
  
  header {
   padding: 30px;
@@ -68,12 +65,13 @@
 
 
 
- 
+ <aside>
   <h2 class="H2">Juomavalikoimat koodauksen tukena</h2> 
 <ul style="list-style-type:square;" class="listat">
   <li>Megaforce Sugarfree
   <li>Euroshopper Energy Drink
 </ul>
+ </aside>
 
  
  
