--- a/third.html
+++ b/third.html
@@ -35,6 +35,19 @@
   margin: 5px;
   }
   
+ footer {
+  text-align:center;
+  font-size:10px;
+  clear:both;
+  font-family: verdana;
+  color: black;
+  background-color: white;
+  border-radius: 30px;
+  border-style: solid;
+  padding: 5px;
+  margin:15px;
+}
+  
   </style>
  
 </head>
