--- a/third.html
+++ b/third.html
@@ -78,13 +78,13 @@
 
 
 
- <aside>
+ <article>
   <h2 class="H2">Juomavalikoimat koodauksen tukena</h2> 
 <ul style="list-style-type:square;" class="listat">
   <li>Megaforce Sugarfree
   <li>Euroshopper Energy Drink
 </ul>
- </aside>
+ </article>
 
  
  
