--- a/third.html
+++ b/third.html
@@ -15,9 +15,10 @@
   
  nav {
   float: left;
-  width: 25%;
-  background: snow;
+  width: 20%;
+  background-color: snow;
   padding: 20px;
+  border: solid;
   }
   
  nav ul {
@@ -27,9 +28,9 @@
   
  section {
   float: left;
-  padding: 20px;
-  width: 75%;
+  width: 80%;
   background-color: white;
+  padding: 20px;
   margin: 5px;
   }
   
