--- a/third.html
+++ b/third.html
@@ -77,13 +77,13 @@
 
 
 
- <article>
+ <main>
   <h2 class="H2">Juomavalikoimat koodauksen tukena</h2> 
 <ul style="list-style-type:square;" class="listat">
   <li>Megaforce Sugarfree
   <li>Euroshopper Energy Drink
 </ul>
- </article>
+ </main>
 
  
  
