--- a/second.html
+++ b/second.html
@@ -35,7 +35,10 @@
   </head>
   
   <body>
+    
+    <header>
     <h1>Tervetuloa toiselle sivulleni! </h1>
+    </header>
     
  <div id="nav">
  <nav>
