--- a/third.html
+++ b/third.html
@@ -77,7 +77,7 @@
 
 
 
- <h2 class="H2">Juomavalikoimat koodauksen tukena</h2> 
+ <h2>Juomavalikoimat koodauksen tukena</h2> 
 <ul style="list-style-type:square;" class="listat">
   <li>Megaforce Sugarfree
   <li>Euroshopper Energy Drink
