--- a/second.html
+++ b/second.html
@@ -36,9 +36,11 @@
   
   <body>
     
-    <header>
-    <h1>Tervetuloa toiselle sivulleni! </h1>
-    </header>
+ <div id="header">
+  <header>
+   <h1>Nettisivut kehitteillä!</h1>
+  </header>
+ </div>
     
  <div id="nav">
  <nav>
